--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8761
 
 eureka:
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 3000
   client:
     register-with-eureka: false
     fetch-registry: false
